<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/hellowText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/im_restaurant" />

    <TextView
        android:id="@+id/hellowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="48sp"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/listeButton"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/hellowText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="openListActivity"
        android:text="@string/liste" />

    <Button
        android:id="@+id/commandeButton"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/listeButton"
        android:layout_centerHorizontal="true"
        android:onClick="openCommandeActivity"
        android:text="@string/commande" />

    <Button
        android:id="@+id/factureButton"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/commandeButton"
        android:layout_centerHorizontal="true"
        android:onClick="openFactureActivity"
        android:text="@string/facture" />

</RelativeLayout>